--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,6 @@
 
 [Configs]
 
-email    = arthur.luft.ribeiro@escola.pr.gov.br
-psw      = arthur30488792805
+email    = email@email.com
+psw      = password123
 pagetime = 5
